# QuanLyKho

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py  seed.py
backend/app/api/v1/: auth.py  dashboard.py  inventory.py  issues.py  machines.py  materials.py  parts_tracking.py  receipts.py  reports.py  router.py  users.py  warehouses.py
backend/app/core/: exceptions.py  permissions.py  security.py
backend/app/models/: __init__.py  audit_log.py  inventory.py  issue.py  machine.py  material.py  receipt.py  user.py  warehouse.py
backend/app/schemas/: dashboard.py  inventory.py  issue.py  machine.py  material.py  receipt.py  report.py  user.py  warehouse.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/Layout/: AppLayout.tsx
frontend/src/pages/: Dashboard.tsx  Inventory.tsx  Issues.tsx  Login.tsx  MachineDetail.tsx  Machines.tsx  Materials.tsx  PartsTracking.tsx  Receipts.tsx  Users.tsx  Warehouses.tsx
frontend/src/pages/Reports/: AbcAnalysis.tsx  InventoryReport.tsx  MaintenanceCost.tsx  StockCard.tsx
frontend/src/store/: index.ts
frontend/src/styles/: index.css  theme.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts
